--- a/MavenWebApplication.yaml
+++ b/MavenWebApplication.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: webpage-deployment
-  namespace: production
+  namespace: webapps
 spec:
   replicas: 2
   revisionHistoryLimit: 5
@@ -32,7 +32,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: webpage-service
-  namespace: production
+  namespace: webapps
 spec:
   type: NodePort
   selector:
